adding assets folder and images files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,34 @@
   <title>Bootstrap-Portfolio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <style>
+    a {
+  color: #777;
+}
+
+@media (max-width: 500px) {
+  .navbar {
+    padding: 0;
+  }
   
+  .navbar-brand {
+    flex: 100%;
+    text-align: center;
+    background: #4aaaa5;
+    margin: 0;
+  }
+  
+  .nav {
+    margin: 0 auto;
+  }
+
+.divider li{
+  color: #cccccc;
+}
+}
+
+body {
+  background-color: grey;
+}
   </style>
 </head>
 <body>
@@ -14,16 +41,18 @@
 
   <!--Navbar here-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#"><h1 style="background-color: #4aaaa5; color: #ffffff; padding-top: 20px; padding-bottom: 20px; padding-right: 10px; padding-left: 10px; ">Rojel Perez Vez</h1></a>
     <ul class="nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
         </li>
+        <li style="color: #cccccc; padding-top: 5px;">|</li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Portfolio</a>
         </li>
+        <li style="color: #cccccc; padding-top: 5px;">|</li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">Contact</a>
         </li>
       </ul>
   </nav>
