(w/p) index.html file

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ body {
    background-image: url('assets/criss-cross.png');
    height: 1000px;
    overflow: auto;
+   align-content: center;
 }
 
 #pic {
@@ -45,7 +46,7 @@ body {
   padding-top: 5px;
 }
 footer {
-            width: 100%;
+            width: auto;
             height: 40px;
             background-color: #777777;
             position: fixed;
@@ -53,6 +54,8 @@ footer {
             margin: 0;
             text-align: center;
             border-top: 8px solid #4aaaa5;
+            color: #cccccc;
+}
    </style>
          </head>
    
@@ -60,7 +63,7 @@ footer {
     
                 <div class="container">
                          <!--Navbar here-->
-                    <nav class="navbar navbar-expand-xxl navbar-light bg-light" style="padding-top: 0px; padding-bottom: 0px; padding-left: 0px; height: 70px;">
+                    <nav class="navbar navbar-expand-xl navbar-light bg-light" style="padding-top: 0px; padding-bottom: 0px; padding-left: 0px; height: 70px;">
                                 <a class="navbar-brand" href="#"><h1 style="background-color: #4aaaa5; color: #ffffff; padding-top: 10px; padding-bottom: 10px; padding-left: 10px; padding-right: 10px; margin-bottom: 0px; font-family: Georgia, 'Times New Roman', Times, serif;">Rojel Perez Vez</h1></a>
                        <ul class="nav">
                             <li class="nav-item active">
