--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@ body {
    background-image: url('assets/criss-cross.png');
    height: 1000px;
    overflow: auto;
-   align-content: center;
 }
 
 #pic {
@@ -46,7 +45,7 @@ body {
   padding-top: 5px;
 }
 footer {
-            width: auto;
+            width: 100%;
             height: 40px;
             background-color: #777777;
             position: fixed;
@@ -63,7 +62,7 @@ footer {
     
                 <div class="container">
                          <!--Navbar here-->
-                    <nav class="navbar navbar-expand-xl navbar-light bg-light" style="padding-top: 0px; padding-bottom: 0px; padding-left: 0px; height: 70px;">
+                    <nav class="navbar navbar-expand-xxl navbar-light bg-light" style="padding-top: 0px; padding-bottom: 0px; padding-left: 0px; height: 70px;">
                                 <a class="navbar-brand" href="#"><h1 style="background-color: #4aaaa5; color: #ffffff; padding-top: 10px; padding-bottom: 10px; padding-left: 10px; padding-right: 10px; margin-bottom: 0px; font-family: Georgia, 'Times New Roman', Times, serif;">Rojel Perez Vez</h1></a>
                        <ul class="nav">
                             <li class="nav-item active">
@@ -83,7 +82,7 @@ footer {
                 </div>
                     <div class="container" style="background-color: #ffffff; height: auto; width: auto;">
                                                 <!-- Content here -->
-                         <div class="page-header" style="width: 980px;"><h1>About Me</h1></div>
+                         <div class="page-header"><h1>About Me</h1></div>
 
                       <hr style="color: #cccccc; height:3px; border: #dddddd; background-color: #dddddd;">
 
