--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@ body {
   color: #cccccc;
   padding-top: 5px;
 }
+
+p {
+  color: #777777;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 footer {
             width: 100%;
             height: 40px;
@@ -82,7 +88,7 @@ footer {
                 </div>
                     <div class="container" style="background-color: #ffffff; height: auto; width: auto;">
                                                 <!-- Content here -->
-                         <div class="page-header"><h1>About Me</h1></div>
+                         <div class="page-header"><h1 style="color: #4aaaa5; font-family: Georgia, 'Times New Roman', Times, serif;">About Me</h1></div>
 
                       <hr style="color: #cccccc; height:3px; border: #dddddd; background-color: #dddddd;">
 
