--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ body {
 }
 
 #pic {
-  width: 350px;
-  height: 350px;
+  width: 400px;
+  height: 400px;
   float: left;
 }
 
@@ -94,7 +94,7 @@ footer {
                       <hr style="color: #cccccc; height:3px; border: #dddddd; background-color: #dddddd;">
 
                       
-                         <div id="pic"><img src="assets/20191125_181410.jpg" alt="..." class="img-thumbnail" style="padding: 20px; border-color: #ffffff;"></div>
+                         <div id="pic"><img src="assets/20191125_181410.jpg" alt="..." class="img-thumbnail" style="padding-right: 30px; padding-bottom: 20px; border-color: #ffffff;"></div>
                        
                           <p>Rojel Perez Vez is the President/Co-Founder of Creative Recreation Redesign Inc, a home renovation company founded in March 2010. After 9 years and counting, Rojel has provided clients with craftsmanship work, great customer service and honest pricing no matter how big or small the project has been. While continuing his career in with his company, he is currently working on full-stack web development at Georgia Institute of Technology.</p>
                           <p>As well as performing his job duties, Rojel has found time to volunteer as a soccer coach at UFA Norcross (United Futbol Academy) and teach children the importance of teamwork, repect and sportmanship since 2015. Rojel was introduced to the Appalachian Trail in 2010 by some friends without knowing what it was, he always tells the story of how he was about to quit the first day, since he was not prepared to carry a 60 lbs backpack on a 40 mile journey, but was able to finish. Since then he has section hiked the Appalachian Trail and hopes to finish one day.</p>
