--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   .nav {
     margin: 0 auto;
     text-align: center;
+    background-color: #ffffff;
   }
 }
 
@@ -69,8 +70,8 @@ footer {
     
                 <div class="container">
                          <!--Navbar here-->
-                    <nav class="navbar navbar-expand-xxl navbar-light bg-light" style="padding-top: 0px; padding-bottom: 0px; padding-left: 0px; height: 70px;">
-                                <a class="navbar-brand" href="#"><h1 style="background-color: #4aaaa5; color: #ffffff; padding-top: 10px; padding-bottom: 10px; padding-left: 10px; padding-right: 10px; margin-bottom: 0px; font-family: Georgia, 'Times New Roman', Times, serif;">Rojel Perez Vez</h1></a>
+                    <nav class="navbar navbar-expand-xxl navbar-light bg-light" style="padding-top: 0px; padding-bottom: 0px; padding-left: 0px; height: 70px; width: 100%;">
+                                <a class="navbar-brand" href="#" style="padding-top: 0px;"><h1 style="background-color: #4aaaa5; color: #ffffff; height: 70px; padding-top: 10px; padding-bottom: 10px; padding-left: 10px; padding-right: 10px; margin-bottom: 0px; font-family: Georgia, 'Times New Roman', Times, serif;">Rojel Perez Vez</h1></a>
                        <ul class="nav">
                             <li class="nav-item active">
                                 <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
