--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     text-align: center;
     background-color: #ffffff;
   }
+
+  #pic {
+    width: 500px;
+  }
 }
 
 body {
@@ -37,8 +41,8 @@ body {
 }
 
 #pic {
-  width: 520px;
-  height: 520px;
+  width: 400px;
+  height: 400px;
   float: left;
 }
 
@@ -88,7 +92,7 @@ footer {
                     </nav>
                                     <br><br><br>
                 
-                    <div class="container" style="background-color: #ffffff; height: auto; width: 1100px; margin-left: 50px; margin-right: 50px; border:1px solid #cccccc; float: left;">
+                    <div class="container" style="background-color: #ffffff; height: auto; width: auto; border:1px solid #cccccc;">
                                                 <!-- Content here -->
                          <div class="page-header"><h1 style="color: #4aaaa5; font-family: Georgia, 'Times New Roman', Times, serif;">About Me</h1></div>
 
