(w/p) adujusted files lay out and place labels on tha images

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@ footer {
                     </nav>
                                     <br><br><br>
                 
-                    <div class="container" style="background: #ffffff; height: auto; width: 500px; border:1px solid #cccccc;">
+                    <div class="container" style="background: #ffffff; height: auto; width: auto; border:1px solid #cccccc;">
                                                 <!-- Content here -->
                          <div class="page-header"><h2 style="color: #4aaaa5; font-family: Georgia, 'Times New Roman', Times, serif;">Contact</h2></div>
 
