--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,7 @@ body {
     
                 
                           <!--Navbar here. I had to add the style/css individually -->
+                  <div class="container">        
                     <nav class="navbar navbar-expand-xxl navbar-light bg-light" style="padding-top: 0px; padding-bottom: 0px; padding-left: 0px; height: 70px; width: 100%; background: #ffffff;">
                                 <a class="navbar-brand" href="#" style="padding-top: 0px;"><h2 style="background-color: #4aaaa5; color: #ffffff; height: 70px; padding-top: 10px; padding-bottom: 10px; padding-left: 10px; padding-right: 10px; margin-bottom: 0px; font-family: Georgia, 'Times New Roman', Times, serif;">Rojel Perez Vez</h2></a>
                        <ul class="nav">
@@ -69,6 +70,7 @@ body {
                             </li>
                         </ul>
                     </nav>
+                  </div>
                                     <br><br><br>
                                                                 <!-- Container --> 
                    <div class="container" style="background: #ffffff; height: auto; width: auto; border:1px solid #cccccc;">
