--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     #pic {
       max-width: 400px;
-     
+
       float: left;
     }
 
@@ -90,7 +90,11 @@
   </nav>
   <br><br><br>
   <!-- Container -->
-  <div class="container" style="background-color: #ffffff; height: auto; width: auto; border:1px solid #cccccc; max-width: 960px;">
+
+
+
+  <div class="container"
+    style="background-color: #ffffff; height: auto; width: auto; border:1px solid #cccccc; max-width: 960px;">
 
     <div class="page-header">
       <h1 style="color: #4aaaa5; font-family: Georgia, 'Times New Roman', Times, serif;">About Me</h1>
