editing and adding css file to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                         <div class="col-xxs-12 col-sm-10 col-md-5 col-lg-5 col-xl-5" id="card">
-                            <div class="container-car-body">
+                            <div class="container-card-body">
                                 <img src="assets/snow.gif">
                                 <h5 class="card-title">Snow</h5>
                             </div>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-10 col-md-5 col-lg-5 col-xl-5" id="card">
-                            <div class="container-car-body">
+                            <div class="container-card-body">
                                 <img src="assets/soccer.jpg">
                                 <h5 class="card-title">Volunteering</h5>
                             </div>
@@ -78,8 +78,8 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-10 col-md-5 col-lg-5 col-xl-5" id="card">
-                            <div class="container-car-body">
-                                <img src="assets/projects.gif"> >
+                            <div class="container-card-body">
+                                <img src="assets/projects.gif">
                                 <h5 class="card-title">Projects</h5>
                             </div>
                         </div>
