--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
                     <!-- Container -->
-                    <div class="container">
+                    <div class="container-content">
 
                         <div class="page-header">
                             <h1>Contact</h1>
